@@ -1,3 +1,8 @@
+2001-03-20  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Frame/CGS4.pm (findnsubs): Use more intelligence when searching
+	for .I components
+
 2001-03-19  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/UFTI.pm: Add ORAC_ header support
